--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>day1</module>
         <module>day2</module>
+        <module>day3</module>
     </modules>
 
     <dependencies>
