Day 3 done + architecture changes
New commons module for, well, common methods

--- a/day1/pom.xml
+++ b/day1/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>day1</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2021</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -20,4 +20,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.ybadache</groupId>
+            <artifactId>commons</artifactId>
+            <version>2021</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
