--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     </properties>
 
     <modules>
+        <module>commons</module>
         <module>day1</module>
         <module>day2</module>
         <module>day3</module>
