--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>day1</module>
         <module>day2</module>
         <module>day3</module>
+        <module>day4</module>
     </modules>
 
     <dependencies>
