--- a/day4/pom.xml
+++ b/day4/pom.xml
@@ -14,6 +14,15 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.ybadache</groupId>
+            <artifactId>commons</artifactId>
+            <version>2021</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
