--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>day3</module>
         <module>day4</module>
         <module>day5</module>
+        <module>day6</module>
     </modules>
 
     <dependencies>
