Day 7 puzzle 1: test OK (need to run main prog)

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>day4</module>
         <module>day5</module>
         <module>day6</module>
+        <module>day7</module>
     </modules>
 
     <dependencies>
